ansible/files/k8s/middleware-strip-api.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: prod
spec:
  stripPrefix:
    prefixes: ["/api"]
