ansible/files/k8s/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: prod
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: mysql
          image: docker.io/ofcan1010/db:v1
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mysql-pvc
