ansible/files/k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: prod
spec:
  selector: { app: backend }
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
