ansible/files/k8s/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: prod
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
