ansible/files/k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: prod
spec:
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
